# xamla_motion_examples

./: README.md  example_01_pick_and_place.py  example_01_pick_and_place.xgraph  example_02_palletizing.py  example_02_palletizing.xgraph  example_create_collision_boxes.py  example_create_joint_values_from_poses.py  example_generate_grid.py  example_generate_grid.xgraph  example_pick_place_poses.py  example_pick_place_poses_linear.py  example_utils.py  project.json  robot.urdf  test_crash.py
db/: worldview.json
example_01/: example_01_pick_and_place.py  example_01_pick_and_place.xgraph
example_01_pick_and_place/: example_pick_place.py
example_02/: example_02_1_generate_grid.py  example_02_2_create_collision_boxes.py  example_02_3_create_joint_values_from_poses.py  example_02_4_pick_place_poses.py  example_02_4_pick_place_poses_linear.py  example_02_5_pick_place_poses.py  example_02_5_pick_place_poses_alt_version.py  example_02_palletizing.py
robotModel/part_motoman_sda10f/: CMakeLists.txt  arm_macro.xacro  common_torso_macro.xacro  package.xml  part.json  sda10f_macro.xacro
robotModel/part_sda10d_cell/: CMakeLists.txt  package.xml  part.json  sda10d_cell.xacro
robotModel/part_sda10d_cell/collision/: sda_cell.stl
robotModel/part_wsg50/: CMakeLists.txt  package.xml  part.json  weiss-wsg50.xacro
robotModel/part_wsg50/collision/: wsg50_base.stl  wsg50_base_gripper_left.stl  wsg50_base_gripper_right.stl  wsg50_gripper_left.stl  wsg50_gripper_right.stl
robotModel/part_wsg50/visual/: wsg50_base.dae  wsg50_base_gripper_left.dae  wsg50_base_gripper_right.dae
(+60 files in other folders)
