<package>
  <name>part_motoman_sda10f</name>
  <version>0.1.0</version>
  <description>The yaskawa motoman sda10f description of Rosvita</description>
  <maintainer email="andre.lemme@xamla.com">Andre Lemme</maintainer>
  <license>BSD</license>
  <url type="website">http://xamla.de</url>
  <author email="andre.lemme@xamla.com">Andre Lemme</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
